# HryOS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  hlib.cmake
code/hlib/include/: aligned_storage.hpp  array.hpp  binary.hpp  charconv.hpp  circular_buffer.hpp  cstring.hpp  format.hpp  integral_limits.hpp  list.hpp  log.hpp  math.hpp  memory.hpp  numerics.hpp  optional.hpp  span.hpp  stack.hpp  string.hpp  string_view.hpp  type_traits.hpp  utility.hpp  variant.hpp
code/hlib/src/: charconv.cpp
code/kernel/: assert.hpp  boot.asm  boot.hpp  config.hpp  kernel.cpp  kernel.hpp  new.cpp  port_utils.hpp  scheduler.cpp  scheduler.hpp  sys_calls.asm  sys_calls.cpp  sys_calls.hpp
code/kernel/concurrency/: lock_guard.hpp  mutex.hpp
code/kernel/drivers/: keyboard.cpp  keyboard.hpp  pit.cpp  pit.hpp
code/kernel/drivers/vesa/: color.hpp  vesa.cpp  vesa.hpp
code/kernel/drivers/vga/: color.hpp  entry.hpp  vga.cpp  vga.hpp
code/kernel/fonts/: fonts.cpp  fonts.hpp  psf.cpp  psf.hpp
code/kernel/interrupts/: exceptions.asm  exceptions.hpp  fault.asm  fault.hpp  interrupts.cpp  interrupts.hpp  irq.asm  irq.hpp  irq_handlers.cpp  isr.asm  isr.hpp  syscall_handler.asm  syscall_handler.cpp  syscall_handler.hpp
code/kernel/logger/: logger.cpp  logger.hpp
code/kernel/math/: vec2.hpp
code/kernel/memory/: allocator.hpp  gdt.asm  gdt.cpp  gdt.hpp  kernel_heap.cpp  kernel_heap.hpp  memory_map.cpp  memory_map.hpp
code/kernel/scheduler/: int_lock.hpp  lock_guard.hpp  mutex.hpp  process.hpp  scheduler.cpp  scheduler.hpp  task_switch.asm
code/kernel/storage/fonts/: zap-light16.h
code/kernel/terminal/: command_line.cpp  command_line.hpp  terminal.cpp  terminal.hpp
code/kernel/terminal/impl/: impl.hpp  vesa_impl.cpp  vga_impl.cpp
config/: bochsrc.bxrc  grub.cfg
kernel/: boot.s  kernel.cpp
kernel/math/: vec2.hpp
kernel/terminal/: color.hpp  entry.hpp  terminal.cpp  terminal.hpp
scripts/: build-iso.sh  linker.ld  run.sh
src/hlib/: algorithms.hpp  cstring.hpp  type_traints.hpp  utility.hpp
src/kernel/: boot.s  kernel.cpp
src/kernel/math/: vec2.hpp
src/kernel/terminal/: color.hpp  cursor.hpp  display.hpp  entry.hpp  terminal.cpp  terminal.hpp
src/kernel/utils/: string.cpp  string.hpp
